Another attempted fix for image rotation on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2087,7 +2087,7 @@ input, select, textarea {
 		margin-bottom: 175px;
 		-ms-transform: rotate(270deg);
     	-webkit-transform: rotate(270deg);
-    	-moz-object-transform: rotate(270deg);
+    	-moz-transform: rotate(270deg);
 		transform: rotate(270deg);
 		position: relative;
 		top: 75px;
